MET-6139 General techincal debt